code/k8s/011/loki/loki.yaml
# 1.命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: logging

---

# 6.Lock Pod
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: logging
  labels:
    app: loki
spec:
  podManagementPolicy: OrderedReady   # 指定 Pod 的管理策略为 OrderedReady：Pod 按顺序（0, 1, 2...）创建和删除，等待前一个 Pod 就绪后再创建下一个
  replicas: 1
  selector:
    matchLabels:
      app: loki
  serviceName: loki
  updateStrategy:
    type: RollingUpdate               # 使用滚动更新策略，逐步替换旧 Pod
  template:
    metadata:
      labels:
        app: loki
    spec:
      serviceAccountName: loki        # 指定 Pod 使用 loki 服务账号（之前定义的 ServiceAccount）
      securityContext:          # 定义 Pod 级别的安全上下文，控制文件系统权限和用户/组 ID
        fsGroup: 10001          # Pod 挂载的卷（如 /data）将归属组 ID 10001
        runAsGroup: 10001       # 容器进程以组 ID 10001 运行，确保挂载的卷（如 PVC）归属组 10001，Loki 进程可以访问
        runAsNonRoot: true      # 强制容器以非 root 用户运行，增强安全性
        runAsUser: 10001        # 容器进程以用户 ID 10001 运行
      initContainers:           # 定义初始化容器，在主容器启动前调整存储路径的权限
        - name: fix-permissions # 初始化容器名称
          image: busybox:1.37.0 # 使用 busybox 镜像，适合执行简单命令
          securityContext:
            privileged: true    # 以特权模式运行，允许修改文件系统权限
            runAsGroup: 0       # 以 root 用户运行
            runAsNonRoot: false
            runAsUser: 0
          command:              # 创建 /data/loki 目录，将 /data 及其子目录的拥有者改为 UID 10001 和 GID 10001，列出 /data 目录内容，验证权限
            - sh
            - -c
            - >-
              id;
              mkdir -p /data/loki;
              chown 10001:10001 /data -R;
              ls -la /data/
          volumeMounts:
            - mountPath: /data  # 挂载 storage 卷到 /data，与主容器共享
              name: storage
      containers:
        - name: loki
          image: grafana/loki:2.9.2
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/loki/config/loki.yaml   # 指定配置文件路径
          volumeMounts:
            - name: config
              mountPath: /etc/loki/config/loki.yaml     # 挂载 ConfigMap loki 的 loki.yaml 到 /etc/loki/config/loki.yaml
              subPath: loki.yaml                        # subPath: loki.yaml 表示只挂载 ConfigMap 中 loki.yaml 键对应的文件内容到 mountPath 指定的路径（/etc/loki/config/loki.yaml）
            - name: storage
              mountPath: "/data"                        # 挂载 PVC 到 /data，用于存储 WAL、索引和块
          ports:
            - name: http-metrics
              containerPort: 3100       # Loki 监听 3100 端口（HTTP），用于接收日志和监控指标
              protocol: TCP
          livenessProbe:                # 存活探测
            httpGet:
              path: /ready              # 检查 /ready 端点，确认 Loki 是否健康/就绪
              port: http-metrics
              scheme: HTTP
            initialDelaySeconds: 45     # 启动后 45 秒开始探测
            timeoutSeconds: 1           # 每次探测超时 1 秒
            periodSeconds: 10           # 每 10 秒探测一次
            successThreshold: 1         # 1 次成功即健康
            failureThreshold: 3         # 3 次失败标记不健康
          readinessProbe:               # 就绪探测
            httpGet:
              path: /ready
              port: http-metrics
              scheme: HTTP
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            readOnlyRootFilesystem: true    # 容器根文件系统为只读，增强安全性。
      terminationGracePeriodSeconds: 4800   # Pod 终止时的宽限期为 4800 秒（80 分钟）
      volumes:
        - name: config          # 定义卷，将 ConfigMap loki 挂载到容器
          configMap:
            defaultMode: 0640   # 文件权限为 rw-r-----（所有者读写，组可读）。0640 前面有0，因此被解析为八进制数
            name: loki          # 引用名为 loki ConfigMap
  volumeClaimTemplates:
    - metadata:
        name: storage
        labels:
          app: loki
      spec:
        storageClassName: "loki-storage"   # 注意修改 storageClass 名称
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "10Gi"

---

# Loki Service
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: logging
  labels:
    app: loki
spec:
  type: ClusterIP
  ports:
    - port: 3100
      protocol: TCP
      name: http
      targetPort: http-metrics
  selector:
    app: loki
